tests/fail/bad_tt.rs
use net_macros::{ip, mac, net, sock};

fn main() {
    let a = ip!(192, 168, 1, 1);
    let b = mac!(0xca, 0xfe, 0xc0, 0xff, 0xee, 0x00);
    let c = net!(0x2001, 0xdb0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x1);
    let d = sock!(ip!("192.168.1.1"), 300);
}
